# wai-scenario-lab

./: NOTICE.md  README.md  requirements.txt
.agents/: CONTEXT.md
core-lab/: Dockerfile  README.md  agents-cli-manifest.yaml  pyproject.toml  wai_scenario_config.json
core-lab/.agents/skills/brief-formatter/: SKILL.md
core-lab/.agents/skills/safety-reviewer/: SKILL.md
core-lab/.agents/skills/scenario-guide/: SKILL.md
core-lab/.agents/skills/value-evidence-reviewer/: SKILL.md
core-lab/.agents/skills/workflow-analyst/: SKILL.md
core-lab/app/: __init__.py  agent.py  config_loader.py  fast_api_app.py  form_validation.py  safety_router.py  schemas.py  terminal_output.py  workflow.py  workflow_adapter.py
core-lab/app/app_utils/: a2a.py  reasoning_engine_adapter.py  services.py  telemetry.py  typing.py
core-lab/app/services/: __init__.py  brief_assembler.py  safety.py
core-lab/deployment/terraform/shared/: completions.sql
core-lab/deployment/terraform/single-project/: apis.tf  iam.tf  outputs.tf  providers.tf  service.tf  service_outputs.tf  storage.tf  telemetry.tf  telemetry_outputs.tf  variables.tf
core-lab/deployment/terraform/single-project/vars/: env.tfvars
core-lab/docs/: GoogleKaggle_VibeCodingProject_GeminiReview.md  GoogleKaggle_VibeCodingProject_wAI_ScenarioLab.md  Kaggle_VibeCodingCapstone_Overview.md  Kaggle_VibeCodingCapstone_Rules.md  architecture.md  commercial-boundaries.md  day2-scenario-ui-completion.md  demo-output-sample.md  demo-script.md  evaluation.md  final-capstone-readiness-audit.md  final-test-results.md  integration-plan.md  jason-quality-walkthrough.md  kaggle-submission-checklist.md  kaggle-submission-notes.md  phase-3-recovery-report.md  repository-scaffold.md  responsible-ai.md  sprint-2-validation-checkpoint.md  sprint-3-workflow-adapter-checkpoint.md  sprint-4-safety-routing-checkpoint.md  sprint-5-terminal-output-checkpoint.md  stride-threat-model.md  veronica-integration-walkthrough.md  warning-remediation-plan.md
core-lab/docs/architecture/: agent-graph.md
core-lab/docs/archive/: deprecated-roi-calculator.md
core-lab/docs/evaluation/: evaluation-results.md
core-lab/docs/evidence/: README.md  youtube-demo-link.txt
core-lab/docs/evidence/sprint-06-day2/: evidence-index.md
core-lab/docs/evidence/sprint-06-day2/recordings/: RECORDING-NOT-CAPTURED.md
core-lab/docs/evidence/sprint-06-day2/terminal-output/: 01-branch-status.txt  02-test-results.txt  03-server-run-command.txt
core-lab/mcp_server/: __init__.py  roi_calculator_server.py  scenario_config_server.py
core-lab/scripts/: run_sample_brief.py
core-lab/tests/: scenarios.feature
core-lab/tests/integration/: test_agent.py  test_demo_script.py  test_phase4_pipeline.py  test_server_e2e.py
core-lab/tests/unit/: test_brief_assembler.py  test_config_loader.py  test_day2_scenarios.py  test_dummy.py  test_roi_calculator.py  test_safety.py  test_safety_router.py  test_scenario_config_mcp.py  test_terminal_output.py  test_workflow_adapter.py
scenario-lab-demo/: .htaccess  README_SCENARIO_LAB_DEMO.md  index.cgi  main.py  (+1 more)
