[project]
name = "core-lab"
version = "0.1.0"
description = "Config-driven multi-agent Scenario Lab for micro business workflow friction."
authors = [
    {name = "Start with wAI"},
]

dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "a2a-sdk[http-server]~=0.3.22",
    "aiohttp>=3.13.4",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.156.0",
    "protobuf>=6.31.1,<7.0.0",
    "mcp>=1.28.1",
    "python-multipart>=0.0.9",
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["app", "mcp_server"]

[tool.ty]
# ty is Astral's Rust-based type checker (same team as ruff/uv)
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,**/package-lock.json"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
addopts = "-p no:cacheprovider"
filterwarnings = [
    "ignore:BaseAgentConfig is deprecated.*:DeprecationWarning",
    "ignore:\\[EXPERIMENTAL\\].*:UserWarning:google\\.adk.*",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*",
    "ignore:You should use `Logger` instead.*:DeprecationWarning",
    "ignore:You should use `LoggerProvider` instead.*:DeprecationWarning",
    "ignore:You should use `ProxyLoggerProvider` instead.*:DeprecationWarning",
    "ignore:You should use `set_logger_provider` instead.*:DeprecationWarning",
    "ignore:Please use `import python_multipart` instead.*:PendingDeprecationWarning",
    "ignore:Duplicate Operation ID.*:UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "mcp_server"]



